# khmer-neural-segmenter

./: .gitignore  CMakeLists.txt  README.md  data.py  khnormal.py  model.py  pyproject.toml  test.py
.github/workflows/: wheels.yml
src/: crf.cpp  crf.h  khmer-segmenter.cpp  khmer-segmenter.h  main.cpp  tokenizer.cpp  tokenizer.h
src/khmerns/: __init__.py  __init__.pyi  khnormal.py
src/kns/: __init__.py  __init__.pyi
test/: example.py
training/: CLAUDE.md  best_model.pt  convert_to_gguf.py  data.py  export_onnx.py  generate.py  infer.py  model.py  requirements.txt  segmenter.onnx  tokenizer.py  train.py
